[metadata]
name = imbusy
version = 1.0.0
description = Update a shared google calendar for oncall schedules
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/crgwilson/imbusy
license = MIT
license_file = LICENSE

[options]
packages = find:
python_requires = >=3.7.0
install_requires =
  google-api-python-client
  google-auth-httplib2
  google-auth-oauthlib

[options.entry_points]
console_scripts = imbusy=imbusy:main

[options.packages.find]
exclude = tests*

[flake8]
max-complexity = 10
max-line-length = 100

# Tell flake8-import-order which modules are "local"
application-import-names = imbusy,tests
ignore = S101

[isort]
profile=black

[mypy]
warn_return_any = True
disallow_untyped_defs = True
follow_imports = silent
ignore_missing_imports = True
